--- a/src/extensions/tailwindcss/tailwind.css
+++ b/src/extensions/tailwindcss/tailwind.css
@@ -2,15 +2,6 @@
  * This is the CSS base class used to generate Tailwind CSS Code
  */
 
-@tailwind base;
-
-
-@tailwind components;
-
-
-@tailwind utilities;
-
-
-
-
-
+ @import "tailwindcss/base";
+ @import "tailwindcss/components";
+ @import "tailwindcss/utilities";
